Week4/namespace-define.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: batchsevenns
  labels:
    app: myflaskapp
