Week4/pod-define-withns.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myfirstpod
  labels:
    app: myflaskapp
  namespace: batchsevenns
spec:
  containers:
    - name: myfirstpod
      image: psrv3/batchsevengithub-action:latest
      ports:
        - containerPort: 5001
