Week4/podwithhvol2.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: mynginxpod
  name: mynginxpod1
spec:
  containers:
  - image: nginx
    name: mynginxpod
    volumeMounts:
      - mountPath: "/var/app/ps"
        name: volumepv
  volumes:
      - name: volumepv
        hostPath:
          path: /usr/share/pranjal
  dnsPolicy: ClusterFirst
  restartPolicy: Never
