Week4/service-define.yaml
apiVersion: v1
kind: Service
metadata:
  name: myfirstpodsvc
spec:
  selector:
    app: myflaskapp
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5001
  type: NodePort
